tests/ui/const-generics/mgca/array_elem_type_mismatch.stderr
error: the literal is not of type `u8`
  --> $DIR/array_elem_type_mismatch.rs:7:25
   |
LL |     foo::<_, { [0, 1u8, 2u32, 8u64] }>();
   |                         ^^^^ expected `u8`, found `u32`

error: the literal is not of type `u8`
  --> $DIR/array_elem_type_mismatch.rs:7:31
   |
LL |     foo::<_, { [0, 1u8, 2u32, 8u64] }>();
   |                               ^^^^ expected `u8`, found `u64`

error: aborting due to 2 previous errors

